dropdown alignment issue fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,17 +17,15 @@
 
 .header-holder.accountpage {
     padding: 40px 0px;
+    position: relative; 
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0px;
+    padding-right: 0px;
+    max-width: 1100px;
 }
 
-.login-btn{
-  color: #fff !important;
-    font-weight: 500 !important;
-    width: 89px !important;
-    height: 36px !important;
-    background: #2eb5ab!important;
-    -o-border-radius: 5px!important;
-    border-radius: 5px!important;
-}
+
 
 .register-btn{
 	text-align:right;
@@ -35,9 +33,55 @@
 .login-sec{
 	font-size:28px;
 }
-@media screen and (max-width: 480px) {
+
+
+.dropdown-element{
+    bottom: 35px;
+    position: absolute;
+    right: 0px;
+    .login-btn{
+  color: #fff;
+    font-weight: 500;
+    width: 89px ;
+    height: 36px;
+    background: #2eb5ab;
+    -o-border-radius: 5px;
+    border-radius: 5px;
+}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1080px) {
+    .login{
+.login-sec{
+    padding: 10px 10px;
+}
+}
+}
+
+
+@media screen and (max-width: 764px) {
+
+.dropdown-element{
+    padding: 70px 0px !important;
+    bottom: 35px;
+    position: relative;
+    right: 0px;
+    .login-btn{
+    text-align: center;
+    font-size: 13px;
+    display: block;
+    width:100%;
+    padding: 12px 15px;
+    background: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #afaeae;
+    border-bottom: 1px solid #e0e0e0;
+    transition: all 0.5s;
+}
+}
 .header-holder.accountpage {
     padding:14px;
+    position: inherit;
 }
   .register-btn{
 	text-align:left;
